MyOrg/src/objects/feedback__c.object
<CustomObject>
    <fields>
        <fullName>Sentiment_Score__c</fullName>
        <label>Sentiment_Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sentiment__c</fullName>
        <label>Sentiment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>feedback__c</fullName>
        <label>feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>subject__c</fullName>
        <label>subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FB-{0000}</displayFormat>
        <label>feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>